Cannot change group of all files while in admin mode
Affected version
- Nightly flatpak: Yes
- Other: 45 (with latest bugfixes), and all earlier versions as well
Steps to reproduce
- Run
nautilus admin:
- Open the Properties of a file owned by root.
- Open the Permissions subpage.
Expected behavior
As admin, I can change the owner and group of any file or folder.
Current behavior
While owner can be changed, group cannot.
Additional information
The logic for changing groups predates the admin backend. Back then nautilus as root was apparently supported, so the code is still tailored for that use (which is unsafe and no longer supported).