file: Allow administrators to change all permissions

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/3125